feat: add CV with HTML and CSS

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
+        <li><a href="#code">Code Example</a></li>
         <li><a href="#contacts">Contacts</a></li>
       </ul>
     </nav>
@@ -44,11 +45,11 @@
     <section id="projects">
       <h2>🧪 Projects</h2>
       <article>
-        <h3>Portfolio Website</h3>
+        <h3><a href="https://dilafruz-01.github.io/portfolio" target="_blank">Portfolio Website</a></h3>
         <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
       </article>
       <article>
-        <h3>React To-Do List</h3>
+        <h3><a href="https://github.com/Dilafruz-01/react-todo" target="_blank">React To-Do List</a></h3>
         <p><strong>Technologies:</strong> React, JavaScript, CSS</p>
       </article>
     </section>
@@ -58,6 +59,16 @@
       <p>Self-Taught Frontend Developer</p>
     </section>
 
+    <section id="code">
+      <h2>💻 Code Example</h2>
+      <pre><code>
+function greet(name) {
+  return `Hello, ${name}!`;
+}
+console.log(greet("Dilafruz"));
+      </code></pre>
+    </section>
+
     <section id="contacts">
       <h2>📞 Contacts</h2>
       <ul>
@@ -65,8 +76,9 @@
         <li>💻 <a href="https://github.com/Dilafruz-01">GitHub</a></li>
         <li>💬 <a href="https://discordapp.com/users/1388199832232923199">Discord</a></li>
       </ul>
+      <!-- Agar avatar.jpg bor bo‘lsa qoldiring, bo‘lmasa bu qatorni o‘chirib turing -->
       <figure>
-        <img src="avatar.jpg" alt="Dilafruz photo" width="200">
+        <img src="avatar.jpg" alt="Profile photo of Dilafruz" width="200">
       </figure>
     </section>
   </main>
